# AI4Museums

./: .gitmodules  README.md
dominant-color/: .pylintrc  README.md  getcolor.py  pyproject.toml
img-allocator/: allocator.py  constants.py  pyproject.toml
img-allocator/data/: encoded_labels.txt
label-enconder/: .pylintrc  encoder.py  pyproject.toml  readme.md
label-enconder/data/interim/: clean_labels.txt
label-enconder/data/processed/: encoded_labels.txt  unique_words.txt
label-enconder/data/raw/: raw_labels.txt
label-enconder/modules/: auxiliar.py  codes.py  constants.py  labels.py
