[tool.poetry]
name = "dominant-color"
version = "0.1.0"
description = "Get dominant color from a png file."
authors = ["Vagner Inácio de Oliveira <vagner.inol@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
tqdm = "^4.64.1"
colornamer = "^0.2.4"
colorthief = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
